--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -44,9 +44,9 @@ layout: default
         
              
         {% if page.citation and page.paperurl %}
-          <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
+          <p>Authors: <i>{{ page.citation }}</i> <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
         {% elsif page.citation %}
-          <p>Recommended citation: {{ page.citation }} </p>
+          <p>Authors: <i>{{ page.citation }}</i> </p>
         {% endif %}
     
         </header>
